{
  "version": 4,
  "terraform_version": "1.1.9",
  "serial": 146,
  "lineage": "865f6490-2165-9fbb-c608-0f7529d6087e",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "web_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-fudgne/providers/Microsoft.Network/loadBalancers/hr-dev-web-lb/frontendIPConfigurations/web-lb-publicip-1",
                "name": "web-lb-publicip-1",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-fudgne/providers/Microsoft.Network/publicIPAddresses/hr-dev-lbpublicip"
              }
            ],
            "id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-fudgne/providers/Microsoft.Network/loadBalancers/hr-dev-web-lb",
            "location": "centralus",
            "name": "hr-dev-web-lb",
            "resource_group_name": "hr-dev-rg-fudgne",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_public_ip.web_lbpublicip",
            "azurerm_resource_group.rg",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "web_lb_backend_address_pool",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-fudgne/providers/Microsoft.Network/loadBalancers/hr-dev-web-lb/backendAddressPools/web-backend",
            "loadbalancer_id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-fudgne/providers/Microsoft.Network/loadBalancers/hr-dev-web-lb",
            "name": "web-backend"
          },
          "dependencies": [
            "azurerm_lb.web_lb",
            "azurerm_public_ip.web_lbpublicip",
            "azurerm_resource_group.rg",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_nat_rule",
      "name": "web_lb_inbound_nat_rule_22",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "backend_port": 22,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-fudgne/providers/Microsoft.Network/loadBalancers/hr-dev-web-lb/frontendIPConfigurations/web-lb-publicip-1",
            "frontend_ip_configuration_name": "web-lb-publicip-1",
            "frontend_port": 1022,
            "id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-fudgne/providers/Microsoft.Network/loadBalancers/hr-dev-web-lb/inboundNatRules/vm-0-ssh-1022-vm-22",
            "idle_timeout_in_minutes": 4,
            "loadbalancer_id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-fudgne/providers/Microsoft.Network/loadBalancers/hr-dev-web-lb",
            "name": "vm-0-ssh-1022-vm-22",
            "protocol": "Tcp",
            "resource_group_name": "hr-dev-rg-fudgne"
          },
          "dependencies": [
            "azurerm_lb.web_lb",
            "azurerm_linux_virtual_machine.web_linuxvm",
            "azurerm_network_interface.web_linuxvm_nic",
            "azurerm_public_ip.web_lbpublicip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "backend_port": 22,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-fudgne/providers/Microsoft.Network/loadBalancers/hr-dev-web-lb/frontendIPConfigurations/web-lb-publicip-1",
            "frontend_ip_configuration_name": "web-lb-publicip-1",
            "frontend_port": 2022,
            "id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-fudgne/providers/Microsoft.Network/loadBalancers/hr-dev-web-lb/inboundNatRules/vm-1-ssh-2022-vm-22",
            "idle_timeout_in_minutes": 4,
            "loadbalancer_id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-fudgne/providers/Microsoft.Network/loadBalancers/hr-dev-web-lb",
            "name": "vm-1-ssh-2022-vm-22",
            "protocol": "Tcp",
            "resource_group_name": "hr-dev-rg-fudgne"
          },
          "dependencies": [
            "azurerm_lb.web_lb",
            "azurerm_linux_virtual_machine.web_linuxvm",
            "azurerm_network_interface.web_linuxvm_nic",
            "azurerm_public_ip.web_lbpublicip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "web_lb_probe",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-fudgne/providers/Microsoft.Network/loadBalancers/hr-dev-web-lb/probes/tcp-probe",
            "interval_in_seconds": 15,
            "loadbalancer_id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-fudgne/providers/Microsoft.Network/loadBalancers/hr-dev-web-lb",
            "name": "tcp-probe",
            "number_of_probes": 2,
            "port": 80,
            "protocol": "Tcp"
          },
          "dependencies": [
            "azurerm_lb.web_lb",
            "azurerm_public_ip.web_lbpublicip",
            "azurerm_resource_group.rg",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "web_lb_rule_app1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_ids": [
              "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-fudgne/providers/Microsoft.Network/loadBalancers/hr-dev-web-lb/backendAddressPools/web-backend"
            ],
            "backend_port": 80,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-fudgne/providers/Microsoft.Network/loadBalancers/hr-dev-web-lb/frontendIPConfigurations/web-lb-publicip-1",
            "frontend_ip_configuration_name": "web-lb-publicip-1",
            "frontend_port": 80,
            "id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-fudgne/providers/Microsoft.Network/loadBalancers/hr-dev-web-lb/loadBalancingRules/web-app1-rule",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-fudgne/providers/Microsoft.Network/loadBalancers/hr-dev-web-lb",
            "name": "web-app1-rule",
            "probe_id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-fudgne/providers/Microsoft.Network/loadBalancers/hr-dev-web-lb/probes/tcp-probe",
            "protocol": "Tcp"
          },
          "dependencies": [
            "azurerm_lb.web_lb",
            "azurerm_lb_backend_address_pool.web_lb_backend_address_pool",
            "azurerm_lb_probe.web_lb_probe",
            "azurerm_public_ip.web_lbpublicip",
            "azurerm_resource_group.rg",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "bastion_host_linuxvm_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-fudgne/providers/Microsoft.Network/networkInterfaces/hr-dev-bastion-host-linuxvm-nic",
            "internal_domain_name_suffix": "zeplie5e5zvufnwqjigmgcbn2e.gx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "bastion-host-ip-1",
                "primary": true,
                "private_ip_address": "10.1.100.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-fudgne/providers/Microsoft.Network/publicIPAddresses/hr-dev-bastion-host-publicip",
                "subnet_id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-fudgne/providers/Microsoft.Network/virtualNetworks/hr-dev-vnet/subnets/hr-dev-vnet-bastionsubnet"
              }
            ],
            "location": "centralus",
            "name": "hr-dev-bastion-host-linuxvm-nic",
            "private_ip_address": "10.1.100.4",
            "private_ip_addresses": [
              "10.1.100.4"
            ],
            "resource_group_name": "hr-dev-rg-fudgne"
          },
          "dependencies": [
            "azurerm_public_ip.bastion_host_publicip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.bastionsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "web_linuxvm_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-fudgne/providers/Microsoft.Network/networkInterfaces/hr-dev-web-linuxvm-nic-0",
            "internal_domain_name_suffix": "zeplie5e5zvufnwqjigmgcbn2e.gx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "web-linuxvm-ip-1",
                "primary": true,
                "private_ip_address": "10.1.1.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-fudgne/providers/Microsoft.Network/virtualNetworks/hr-dev-vnet/subnets/hr-dev-vnet-websubnet"
              }
            ],
            "location": "centralus",
            "name": "hr-dev-web-linuxvm-nic-0",
            "private_ip_address": "10.1.1.5",
            "private_ip_addresses": [
              "10.1.1.5"
            ],
            "resource_group_name": "hr-dev-rg-fudgne"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-fudgne/providers/Microsoft.Network/networkInterfaces/hr-dev-web-linuxvm-nic-1",
            "internal_domain_name_suffix": "zeplie5e5zvufnwqjigmgcbn2e.gx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "web-linuxvm-ip-1",
                "primary": true,
                "private_ip_address": "10.1.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-fudgne/providers/Microsoft.Network/virtualNetworks/hr-dev-vnet/subnets/hr-dev-vnet-websubnet"
              }
            ],
            "location": "centralus",
            "name": "hr-dev-web-linuxvm-nic-1",
            "private_ip_address": "10.1.1.4",
            "private_ip_addresses": [
              "10.1.1.4"
            ],
            "resource_group_name": "hr-dev-rg-fudgne"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_backend_address_pool_association",
      "name": "web_nic_lb_associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-fudgne/providers/Microsoft.Network/loadBalancers/hr-dev-web-lb/backendAddressPools/web-backend",
            "id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-fudgne/providers/Microsoft.Network/networkInterfaces/hr-dev-web-linuxvm-nic-0/ipConfigurations/web-linuxvm-ip-1|/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-fudgne/providers/Microsoft.Network/loadBalancers/hr-dev-web-lb/backendAddressPools/web-backend",
            "ip_configuration_name": "web-linuxvm-ip-1",
            "network_interface_id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-fudgne/providers/Microsoft.Network/networkInterfaces/hr-dev-web-linuxvm-nic-0"
          },
          "dependencies": [
            "azurerm_lb.web_lb",
            "azurerm_lb_backend_address_pool.web_lb_backend_address_pool",
            "azurerm_network_interface.web_linuxvm_nic",
            "azurerm_public_ip.web_lbpublicip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-fudgne/providers/Microsoft.Network/loadBalancers/hr-dev-web-lb/backendAddressPools/web-backend",
            "id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-fudgne/providers/Microsoft.Network/networkInterfaces/hr-dev-web-linuxvm-nic-1/ipConfigurations/web-linuxvm-ip-1|/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-fudgne/providers/Microsoft.Network/loadBalancers/hr-dev-web-lb/backendAddressPools/web-backend",
            "ip_configuration_name": "web-linuxvm-ip-1",
            "network_interface_id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-fudgne/providers/Microsoft.Network/networkInterfaces/hr-dev-web-linuxvm-nic-1"
          },
          "dependencies": [
            "azurerm_lb.web_lb",
            "azurerm_lb_backend_address_pool.web_lb_backend_address_pool",
            "azurerm_network_interface.web_linuxvm_nic",
            "azurerm_public_ip.web_lbpublicip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_nat_rule_association",
      "name": "web_nic_nat_rule_associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-fudgne/providers/Microsoft.Network/networkInterfaces/hr-dev-web-linuxvm-nic-0/ipConfigurations/web-linuxvm-ip-1|/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-fudgne/providers/Microsoft.Network/loadBalancers/hr-dev-web-lb/inboundNatRules/vm-0-ssh-1022-vm-22",
            "ip_configuration_name": "web-linuxvm-ip-1",
            "nat_rule_id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-fudgne/providers/Microsoft.Network/loadBalancers/hr-dev-web-lb/inboundNatRules/vm-0-ssh-1022-vm-22",
            "network_interface_id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-fudgne/providers/Microsoft.Network/networkInterfaces/hr-dev-web-linuxvm-nic-0"
          },
          "dependencies": [
            "azurerm_lb.web_lb",
            "azurerm_lb_nat_rule.web_lb_inbound_nat_rule_22",
            "azurerm_linux_virtual_machine.web_linuxvm",
            "azurerm_network_interface.web_linuxvm_nic",
            "azurerm_public_ip.web_lbpublicip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-fudgne/providers/Microsoft.Network/networkInterfaces/hr-dev-web-linuxvm-nic-1/ipConfigurations/web-linuxvm-ip-1|/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-fudgne/providers/Microsoft.Network/loadBalancers/hr-dev-web-lb/inboundNatRules/vm-1-ssh-2022-vm-22",
            "ip_configuration_name": "web-linuxvm-ip-1",
            "nat_rule_id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-fudgne/providers/Microsoft.Network/loadBalancers/hr-dev-web-lb/inboundNatRules/vm-1-ssh-2022-vm-22",
            "network_interface_id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-fudgne/providers/Microsoft.Network/networkInterfaces/hr-dev-web-linuxvm-nic-1"
          },
          "dependencies": [
            "azurerm_lb.web_lb",
            "azurerm_lb_nat_rule.web_lb_inbound_nat_rule_22",
            "azurerm_linux_virtual_machine.web_linuxvm",
            "azurerm_network_interface.web_linuxvm_nic",
            "azurerm_public_ip.web_lbpublicip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "app_subnet_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-fudgne/providers/Microsoft.Network/networkSecurityGroups/hr-dev-vnet-appsubnet-nsg",
            "location": "centralus",
            "name": "hr-dev-vnet-appsubnet-nsg",
            "resource_group_name": "hr-dev-rg-fudgne",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.appsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "bastion_subnet_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-fudgne/providers/Microsoft.Network/networkSecurityGroups/hr-dev-vnet-bastionsubnet-nsg",
            "location": "centralus",
            "name": "hr-dev-vnet-bastionsubnet-nsg",
            "resource_group_name": "hr-dev-rg-fudgne",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.bastionsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "db_subnet_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-fudgne/providers/Microsoft.Network/networkSecurityGroups/hr-dev-vnet-dbsubnet-nsg",
            "location": "centralus",
            "name": "hr-dev-vnet-dbsubnet-nsg",
            "resource_group_name": "hr-dev-rg-fudgne",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.dbsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "web_subnet_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-fudgne/providers/Microsoft.Network/networkSecurityGroups/hr-dev-vnet-websubnet-nsg",
            "location": "centralus",
            "name": "hr-dev-vnet-websubnet-nsg",
            "resource_group_name": "hr-dev-rg-fudgne",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "app_nsg_rule_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "100",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "80",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-fudgne/providers/Microsoft.Network/networkSecurityGroups/hr-dev-vnet-appsubnet-nsg/securityRules/Rule-Port-80",
            "name": "Rule-Port-80",
            "network_security_group_name": "hr-dev-vnet-appsubnet-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "hr-dev-rg-fudgne",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.app_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.appsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        },
        {
          "index_key": "110",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "443",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-fudgne/providers/Microsoft.Network/networkSecurityGroups/hr-dev-vnet-appsubnet-nsg/securityRules/Rule-Port-443",
            "name": "Rule-Port-443",
            "network_security_group_name": "hr-dev-vnet-appsubnet-nsg",
            "priority": 110,
            "protocol": "Tcp",
            "resource_group_name": "hr-dev-rg-fudgne",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.app_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.appsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        },
        {
          "index_key": "120",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "8080",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-fudgne/providers/Microsoft.Network/networkSecurityGroups/hr-dev-vnet-appsubnet-nsg/securityRules/Rule-Port-8080",
            "name": "Rule-Port-8080",
            "network_security_group_name": "hr-dev-vnet-appsubnet-nsg",
            "priority": 120,
            "protocol": "Tcp",
            "resource_group_name": "hr-dev-rg-fudgne",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.app_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.appsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        },
        {
          "index_key": "130",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-fudgne/providers/Microsoft.Network/networkSecurityGroups/hr-dev-vnet-appsubnet-nsg/securityRules/Rule-Port-22",
            "name": "Rule-Port-22",
            "network_security_group_name": "hr-dev-vnet-appsubnet-nsg",
            "priority": 130,
            "protocol": "Tcp",
            "resource_group_name": "hr-dev-rg-fudgne",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.app_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.appsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "bastion_nsg_rule_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "100",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-fudgne/providers/Microsoft.Network/networkSecurityGroups/hr-dev-vnet-bastionsubnet-nsg/securityRules/Rule-Port-22",
            "name": "Rule-Port-22",
            "network_security_group_name": "hr-dev-vnet-bastionsubnet-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "hr-dev-rg-fudgne",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.bastion_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.bastionsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        },
        {
          "index_key": "110",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "3389",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-fudgne/providers/Microsoft.Network/networkSecurityGroups/hr-dev-vnet-bastionsubnet-nsg/securityRules/Rule-Port-3389",
            "name": "Rule-Port-3389",
            "network_security_group_name": "hr-dev-vnet-bastionsubnet-nsg",
            "priority": 110,
            "protocol": "Tcp",
            "resource_group_name": "hr-dev-rg-fudgne",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.bastion_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.bastionsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "db_nsg_rule_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "100",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "3306",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-fudgne/providers/Microsoft.Network/networkSecurityGroups/hr-dev-vnet-dbsubnet-nsg/securityRules/Rule-Port-3306",
            "name": "Rule-Port-3306",
            "network_security_group_name": "hr-dev-vnet-dbsubnet-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "hr-dev-rg-fudgne",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.db_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.dbsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        },
        {
          "index_key": "110",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "1433",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-fudgne/providers/Microsoft.Network/networkSecurityGroups/hr-dev-vnet-dbsubnet-nsg/securityRules/Rule-Port-1433",
            "name": "Rule-Port-1433",
            "network_security_group_name": "hr-dev-vnet-dbsubnet-nsg",
            "priority": 110,
            "protocol": "Tcp",
            "resource_group_name": "hr-dev-rg-fudgne",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.db_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.dbsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        },
        {
          "index_key": "120",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "5432",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-fudgne/providers/Microsoft.Network/networkSecurityGroups/hr-dev-vnet-dbsubnet-nsg/securityRules/Rule-Port-5432",
            "name": "Rule-Port-5432",
            "network_security_group_name": "hr-dev-vnet-dbsubnet-nsg",
            "priority": 120,
            "protocol": "Tcp",
            "resource_group_name": "hr-dev-rg-fudgne",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.db_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.dbsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "web_nsg_rule_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "100",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "80",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-fudgne/providers/Microsoft.Network/networkSecurityGroups/hr-dev-vnet-websubnet-nsg/securityRules/Rule-Port-80",
            "name": "Rule-Port-80",
            "network_security_group_name": "hr-dev-vnet-websubnet-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "hr-dev-rg-fudgne",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.web_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        },
        {
          "index_key": "110",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "443",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-fudgne/providers/Microsoft.Network/networkSecurityGroups/hr-dev-vnet-websubnet-nsg/securityRules/Rule-Port-443",
            "name": "Rule-Port-443",
            "network_security_group_name": "hr-dev-vnet-websubnet-nsg",
            "priority": 110,
            "protocol": "Tcp",
            "resource_group_name": "hr-dev-rg-fudgne",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.web_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        },
        {
          "index_key": "120",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-fudgne/providers/Microsoft.Network/networkSecurityGroups/hr-dev-vnet-websubnet-nsg/securityRules/Rule-Port-22",
            "name": "Rule-Port-22",
            "network_security_group_name": "hr-dev-vnet-websubnet-nsg",
            "priority": 120,
            "protocol": "Tcp",
            "resource_group_name": "hr-dev-rg-fudgne",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.web_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "bastion_host_publicip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-fudgne/providers/Microsoft.Network/publicIPAddresses/hr-dev-bastion-host-publicip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "40.69.153.244",
            "ip_version": "IPv4",
            "location": "centralus",
            "name": "hr-dev-bastion-host-publicip",
            "resource_group_name": "hr-dev-rg-fudgne",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "web_lbpublicip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-fudgne/providers/Microsoft.Network/publicIPAddresses/hr-dev-lbpublicip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.165.0.228",
            "ip_version": "IPv4",
            "location": "centralus",
            "name": "hr-dev-lbpublicip",
            "resource_group_name": "hr-dev-rg-fudgne",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "environment": "dev",
              "owners": "hr"
            }
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "appsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.1.11.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-fudgne/providers/Microsoft.Network/virtualNetworks/hr-dev-vnet/subnets/hr-dev-vnet-appsubnet",
            "name": "hr-dev-vnet-appsubnet",
            "resource_group_name": "hr-dev-rg-fudgne",
            "virtual_network_name": "hr-dev-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "bastionsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.1.100.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-fudgne/providers/Microsoft.Network/virtualNetworks/hr-dev-vnet/subnets/hr-dev-vnet-bastionsubnet",
            "name": "hr-dev-vnet-bastionsubnet",
            "resource_group_name": "hr-dev-rg-fudgne",
            "virtual_network_name": "hr-dev-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "dbsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.1.21.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-fudgne/providers/Microsoft.Network/virtualNetworks/hr-dev-vnet/subnets/hr-dev-vnet-dbsubnet",
            "name": "hr-dev-vnet-dbsubnet",
            "resource_group_name": "hr-dev-rg-fudgne",
            "virtual_network_name": "hr-dev-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "websubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.1.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-fudgne/providers/Microsoft.Network/virtualNetworks/hr-dev-vnet/subnets/hr-dev-vnet-websubnet",
            "name": "hr-dev-vnet-websubnet",
            "resource_group_name": "hr-dev-rg-fudgne",
            "virtual_network_name": "hr-dev-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "app_subnet_nsg_associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-fudgne/providers/Microsoft.Network/virtualNetworks/hr-dev-vnet/subnets/hr-dev-vnet-appsubnet",
            "network_security_group_id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-fudgne/providers/Microsoft.Network/networkSecurityGroups/hr-dev-vnet-appsubnet-nsg",
            "subnet_id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-fudgne/providers/Microsoft.Network/virtualNetworks/hr-dev-vnet/subnets/hr-dev-vnet-appsubnet"
          },
          "dependencies": [
            "azurerm_network_security_group.app_subnet_nsg",
            "azurerm_network_security_rule.app_nsg_rule_inbound",
            "azurerm_resource_group.rg",
            "azurerm_subnet.appsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "bastion_subnet_nsg_associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-fudgne/providers/Microsoft.Network/virtualNetworks/hr-dev-vnet/subnets/hr-dev-vnet-bastionsubnet",
            "network_security_group_id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-fudgne/providers/Microsoft.Network/networkSecurityGroups/hr-dev-vnet-bastionsubnet-nsg",
            "subnet_id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-fudgne/providers/Microsoft.Network/virtualNetworks/hr-dev-vnet/subnets/hr-dev-vnet-bastionsubnet"
          },
          "dependencies": [
            "azurerm_network_security_group.bastion_subnet_nsg",
            "azurerm_network_security_rule.bastion_nsg_rule_inbound",
            "azurerm_resource_group.rg",
            "azurerm_subnet.bastionsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "db_subnet_nsg_associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-fudgne/providers/Microsoft.Network/virtualNetworks/hr-dev-vnet/subnets/hr-dev-vnet-dbsubnet",
            "network_security_group_id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-fudgne/providers/Microsoft.Network/networkSecurityGroups/hr-dev-vnet-dbsubnet-nsg",
            "subnet_id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-fudgne/providers/Microsoft.Network/virtualNetworks/hr-dev-vnet/subnets/hr-dev-vnet-dbsubnet"
          },
          "dependencies": [
            "azurerm_network_security_group.db_subnet_nsg",
            "azurerm_network_security_rule.db_nsg_rule_inbound",
            "azurerm_resource_group.rg",
            "azurerm_subnet.dbsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "web_subnet_nsg_associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-fudgne/providers/Microsoft.Network/virtualNetworks/hr-dev-vnet/subnets/hr-dev-vnet-websubnet",
            "network_security_group_id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-fudgne/providers/Microsoft.Network/networkSecurityGroups/hr-dev-vnet-websubnet-nsg",
            "subnet_id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-fudgne/providers/Microsoft.Network/virtualNetworks/hr-dev-vnet/subnets/hr-dev-vnet-websubnet"
          },
          "dependencies": [
            "azurerm_network_security_group.web_subnet_nsg",
            "azurerm_network_security_rule.web_nsg_rule_inbound",
            "azurerm_resource_group.rg",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.1.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "13b41ec9-fee4-426b-b6d0-4a0cc3082de4",
            "id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-fudgne/providers/Microsoft.Network/virtualNetworks/hr-dev-vnet",
            "location": "centralus",
            "name": "hr-dev-vnet",
            "resource_group_name": "hr-dev-rg-fudgne",
            "tags": {
              "environment": "dev",
              "owners": "hr"
            }
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "random_string.myrandom"
          ]
        }
      ]
    }
  ]
}